--- a/force-app/main/default/classes/AAExtIdUpsert.cls
+++ b/force-app/main/default/classes/AAExtIdUpsert.cls
@@ -1,5 +1,5 @@
 public class AAExtIdUpsert{
-//AAExtIdUpsert.upsertAcc();
+//AAExtIdUpsert.upsertAcc(); My new changes
 
     public static void upsertAcc(){
     
