--- a/force-app/main/default/classes/a.cls
+++ b/force-app/main/default/classes/a.cls
@@ -3,12 +3,9 @@ public class a{
     //f1.1
     // dev branch
     //Ashish-1256
-<<<<<<< HEAD
     //Ashish-128
-=======
-    //Ashish-124
->>>>>>> 6b956375d3622a2fc449ad946ca25cb2eec55364
 public static void b(){
 integer a=0;
+integer x=0;
 }
 }
