--- a/force-app/main/default/classes/AAExtIdUpsert.cls
+++ b/force-app/main/default/classes/AAExtIdUpsert.cls
@@ -1,6 +1,5 @@
 public class AAExtIdUpsert{
-//AAExtIdUpsert.upsertAcc(); My new changes
-// 2nd changes in remote    
+//AAExtIdUpsert.upsertAcc();
 
     public static void upsertAcc(){
     
